--- a/gezi/templates/resultPage.html
+++ b/gezi/templates/resultPage.html
@@ -388,54 +388,53 @@ h1{
 </style>
 
 <body onhashchange="hashChangeFunction()" onload="pageLoadFinishFunction()">
- <div class="main2">
-       <div class="row">
-              <div class="col-9 col-s-12">
-
-                  {% if altSehirler %}
-                        {% for altSehir in altSehirler %}
-                                <div class="col-s-12 col-2" >
-                                    <label class="container">{{altSehir.yerAdi}}
-                                    <input type="checkbox" checked="unchecked">
-                                    <span class="checkmark"></span>
-                                    </label>
-                                </div>
-                        {% endfor %}
-                 {% else %}
-                    <h3>You dont have any permission</h3>
-                {% endif %}
-
+     <div class="main2">
+           <div class="row">
+                <form id="formX" action="{% url 'detail' %}" method="GET">
+                    <div class="col-9 col-s-12">
+                      {% if altSehirler %}
+                            {% for altSehir in altSehirler %}
+                                    <div class="col-s-12 col-2" >
+                                        <label class="container">{{altSehir.yerAdi}}
+                                            <input type="checkbox" id="{{altSehir.yerAdi}}" name="cityChecks[]" checked="checked" value="{{altSehir.yerAdi}}">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                            {% endfor %}
+                     {% else %}
+                        <h3>You dont have any permission</h3>
+                    {% endif %}
+                        <input type="text"  style="visibility: hidden;" id="xdemR" name="changeStatus1" value="tpmksRxikseel">
+                    </div>
+                </form>
+                    <div class="col-2 col-s-12 buttonHiza">
+                                 <button type="submit" id="routeButton" class="button2" >Rota Belirle</button>
+                                 <button type="submit" id="hotelsButton" class="button2" >Otelleri Göster</button>
+                                 <button type="submit" id="restaurantButton" class="button2" >Restaurantları Göster</button>
+                                 <button type="submit" id="wayButton" class="button2" style="visibility: hidden;">Yol güzergahı</button>
+                    </div>
             </div>
-
-             <div class="col-2 col-s-12 buttonHiza">
-                     <button type="submit" id="routeButton" class="button2" >Rota Belirle</button>
-                     <button type="submit" id="hotelsButton" class="button2" >Otelleri Göster</button>
-                     <button type="submit" id="restaurantButton" class="button2" >Restaurantları Göster</button>
-                     <button type="submit" id="wayButton" class="button2" style="visibility: hidden;">Yol güzergahı</button>
-                     <script src="{% static 'script/allScript.js' %}"></script>
-            </div>
-        </div>
 
 <br />
-<div class="maps_container">
-    <div id="map_container"></div>
-<div class="maps_div">
+        <div class="maps_container">
+            <div id="map_container"></div>
+                <div class="maps_div">
 
 
-<ol>
-    {% for cityName in sortedCitiesNameList %}
-        <li>{{cityName}}</li>
-    {% endfor %}
-</ol>
+                    <ol>
+                        {% for cityName in sortedCitiesNameList %}
+                            <li>{{cityName}}</li>
+                        {% endfor %}
+                    </ol>
 
 
 
-</div>
-</div>
-
-</div>
+                </div>
+            </div>
+    </div>
 <!--The div element for the map -->
     <div id="map"></div>
+     <script src="{% static 'script/allScript.js' %}"></script>
     <script>
         function initMap() {
               // The location of Uluru
@@ -463,7 +462,6 @@ h1{
               document.getElementById('routeButton').addEventListener('click', function() {
                         dynamicButton({% url 'detail' %});
               });
-
 
 
               document.getElementById('wayButton').addEventListener('click', function() {
@@ -581,7 +579,7 @@ h1{
                         directionsRenderer.setDirections(response);
 
                       } else {
-                        window.alert('Directions request failed due to ' + status);
+
                       }
                     });
         }
@@ -636,11 +634,10 @@ h1{
     </script>
 
  <!-- Burası rotaStateFlag flag için secondFlag ve thirdFlag komutlarında çalışıyor -->
-<form action="{% url 'detail' %}" method="GET">
-    <div>
-        <input type="text"  style="visibility: hidden;" id="xdemR" name="changeStatus1" value="tpmksRxikseel">
-        <button type="submit" style="visibility: hidden;" id="xdemR1" value="TTT">ttt</button>
+
+     <div>
+        <button type="submit" style="visibility: hidden;" id="xdemR1" form="formX" value="TTT">ttt</button>
     </div>
-</form>
+
 </body>
 </html>
