--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -33,7 +33,35 @@
             <div><img src="static/images/leaves4.png"></div>
         </div>
 
-         <div class="logo"><img src="static/images/gff.gif" width="620" height="100" alt="logo" /></div>
+        <div class="wavy">
+            <span style="--i:1; background-color:#f2f2eb ;color: #991d1f;">R</span>
+            <span style="--i:2;color: #991d1f;background-color:#f2f2eb ;">o</span>
+            <span style="--i:3;color: #991d1f;background-color:white ;">T</span>
+            <span style="--i:4;color: #991d1f;background-color:white ;">a</span>
+            <span style="--i:5;color: #991d1f;background-color:white ;"> </span>
+            <span style="--i:6;color: #991d1f;background-color:white ;">B</span>
+            <span style="--i:7;color: #991d1f;background-color:white ;">i</span>
+            <span style="--i:8;color: #991d1f;background-color:white ;">z</span>
+            <span style="--i:9;color: #991d1f;background-color:white ;">d</span>
+            <span style="--i:10;color: #991d1f;background-color:white ;">e</span>
+            <span style="--i:11;color: #991d1f;background-color:white ;">n</span>
+            <span style="--i:12;color: #991d1f;background-color:white ;"> </span>
+            <span style="--i:13;color: #991d1f;background-color:white ;">G</span>
+            <span style="--i:14;color: #991d1f;background-color:white ;">e</span>
+            <span style="--i:15;color: #991d1f;background-color:white ;">Z</span>
+            <span style="--i:16;color: #991d1f;background-color:white ;">M</span>
+            <span style="--i:17;color: #991d1f;background-color:white ;">e</span>
+            <span style="--i:18;color: #991d1f;background-color:white ;">S</span>
+            <span style="--i:19;color: #991d1f;background-color:white ;">i</span>
+            <span style="--i:20;color: #991d1f;background-color:white ;"> </span>
+            <span style="--i:21;color: #991d1f;background-color:white ;">S</span>
+            <span style="--i:22;color: #991d1f;background-color:white ;">e</span>
+            <span style="--i:23;color: #991d1f;background-color:white ;">N</span>
+            <span style="--i:24;color: #991d1f;background-color:white ;">D</span>
+            <span style="--i:25;color: #991d1f;background-color:white ;">e</span>
+            <span style="--i:26;color: #991d1f;background-color:white ;">N</span>
+        </div>
+
 
          <div class="onoffswitch">
             <input type="checkbox" name="checks[]" value="mod" onclick="handleClick(this);" class="onoffswitch-checkbox" id="myonoffswitch" checked>
