--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -22,16 +22,7 @@
             <div><img src="static/images/leaves1.png"></div>
             <div><img src="static/images/leaves4.png"></div>
         </div>
-        <div class="set set2">
-            <div><img src="static/images/leaves1.png"></div>
-            <div><img src="static/images/leaves2.png"></div>
-            <div><img src="static/images/leaves1.png"></div>
-            <div><img src="static/images/leaves4.png"></div>
-            <div><img src="static/images/leaves1.png"></div>
-            <div><img src="static/images/leaves2.png"></div>
-            <div><img src="static/images/leaves1.png"></div>
-            <div><img src="static/images/leaves4.png"></div>
-        </div>
+
 
         <div class="wavy">
             <span style="--i:1; background-color:#f2f2eb ;color: #991d1f;">R</span>
@@ -72,7 +63,7 @@
         </div>
 
           <input style="background-color: #FFFFFF" class="searchinput" id="searchArea" name="lastname" type="text" align="center" placeholder="Km Giriniz...">
-          <button type="submit" formaction="{% url 'detail' %}"  id="searchButton">Search</button>
+          <button type="submit" formaction="{% url 'detail' %}"  style="position:relative;" id="searchButton">Ara</button>
 
           <script src="{% static 'script/allScript.js' %}"></script>
 
